<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="85dp"
    android:fillViewport="true"
    tools:context=".ui.order.sale.shop.SaleOrdersFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="55sp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TitleFragment"
            android:layout_width="wrap_content"
            android:text="@string/sales" />

        <!--  Filtrar -->
        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/btn_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_filter" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <!-- Filtrar por estado -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/mulish"
                android:text="@string/filter_state"
                android:textSize="14sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_statuses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <!-- Todos -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_all_statuses"
                    style="@style/ChipButton"
                    android:checked="true"
                    android:tag="@string/tag_all"
                    android:text="@string/filter_all" />

                <!-- Pendientes -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_pending"
                    style="@style/ChipButton"
                    android:tag="@string/tag_pending"
                    android:text="@string/filter_pending" />

                <!-- Confirmados -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_confirmed"
                    style="@style/ChipButton"
                    android:tag="@string/tag_confirmed"
                    android:text="@string/filter_confirmed" />

                <!-- Enviados -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_shipped"
                    style="@style/ChipButton"
                    android:tag="@string/tag_shipped"
                    android:text="@string/filter_shipped" />

                <!-- Entregados -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_delivered"
                    style="@style/ChipButton"
                    android:tag="@string/tag_delivered"
                    android:text="@string/filter_delivered" />

                <!-- Cancelados -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_cancelled"
                    style="@style/ChipButton"
                    android:tag="@string/tag_cancelled"
                    android:text="@string/filter_cancelled" />

                <!-- Devueltos -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_returned"
                    style="@style/ChipButton"
                    android:tag="@string/tag_returned"
                    android:text="@string/filter_returned" />

            </com.google.android.material.chip.ChipGroup>

            <!-- Ordenar ascendente / descendente -->
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/mulish"
                android:text="@string/filter_order"
                android:textSize="14sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="9dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <!-- Ascendente -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_ascending"
                    style="@style/ChipButton"
                    android:tag="@string/tag_ascending"
                    android:text="@string/filter_ascending" />

                <!-- Descendente -->
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_descending"
                    style="@style/ChipButton"
                    android:tag="@string/tag_descending"
                    android:text="@string/filter_descending" />

            </com.google.android.material.chip.ChipGroup>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--  Lista de ventas -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_info"
            style="@style/InfoTextView"
            android:text="@string/info_no_orders"
            android:visibility="gone" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>